test/kind/wrong/type7.kk.out
test/kind/wrong/type7.kk(2, 7): error: invalid syntax
 open or extend