test/kind/wrong/type7.kk
// test type variable/constructor
type a<b> {
 con Test( x : a<b> )
}
